--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -1,20 +1,55 @@
+## 1
 name: Android Build
+## Actions that will be executed when you push code currently none
+on:
+  push:
 
-on:pull_request
-
+## 2
 jobs:
-  build:
+  ## 3
+  unit_tests:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
 
-      - name: Set Up JDK
-        uses: actions/setup-java@v1
+      - name: Unit tests
+        run: ./gradlew test
+  ## 4
+  android_tests:
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Instrumentation Tests
+        uses: reactivecircus/android-emulator-runner@v2
         with:
-          java-version: 1.8
+          api-level: 29
+          script: ./gradlew connectedAndroidTest
+#on:
+#  # Trigger the workflow on push or pull request,
+#  # but only for the main branch
+#  push:
+#    branches:
+#      - main
+#  pull_request:
+#    branches:
+#      - main
+#
+#jobs:
+#  build:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v1
+#
+#      - name: Set Up JDK
+#        uses: actions/setup-java@v1
+#        with:
+#          java-version: 1.8
+#
+#        - name: Run Tests
+#          run: ./gradlew test
 
-        - name: Run Tests
-          run: ./gradlew test
+#        -name: Build Project
+#         run: ./gradlew assemble
 
-        -name: Build Project
-         run: ./gradlew assemble
+
